--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "node-sentiment-analysis",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -8,5 +9,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "eslint-config-upleveled": "^4.1.8",
+    "typescript": "^5.0.4"
+  }
 }
