--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "eslint-config-upleveled": "^4.1.8",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "node-fetch": "^3.3.1"
   }
 }
